# git-user

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: cli.rs  main.rs
