[package]
name = "git-user"
version = "0.1.2"
authors = ["Linus789"]
edition = "2018"
description = "A simple way to change the user of a git repository"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Linus789/git-user"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
toml = { version = "0.5.9", features = ["preserve_order"] }
serde = { version = "1.0.148", features = ["derive"] }
dirs = "3.0.2"
dialoguer = "0.8.0"
console = "0.14.1"
ctrlc = { version = "3.2.3", features = ["termination"] }
strum = "0.20"
strum_macros = "0.20"